--- a/KhN/KhN.Server/KhN.Server.csproj
+++ b/KhN/KhN.Server/KhN.Server.csproj
@@ -10,4 +10,11 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="CommandHandlers\" />
+    <Folder Include="QueryHandlers\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
